# cramkap-ale-sigma

./: .gitmodules  CMakeLists.txt
src/: main.c
